{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 78,
  "lineage": "61927151-e089-8658-3b0d-5dec817d5ce0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-cb2305a1",
            "arn": "arn:aws:ec2:us-east-1:527372304345:instance/i-08d53fd7be2dd94cb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdcz",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0349b8fd008bc4552",
                "volume_size": 22,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08d53fd7be2dd94cb",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e1e99d9707d881d3",
            "private_dns": "ip-172-31-87-44.ec2.internal",
            "private_ip": "172.31.87.44",
            "public_dns": "ec2-3-234-246-59.compute-1.amazonaws.com",
            "public_ip": "3.234.246.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01a1607d79938754d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-ba6feab6",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08dcd14316a0525c5"
            ]
          },
          "dependencies": [
            "aws_security_group.w1_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "w1_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:527372304345:security-group/sg-08dcd14316a0525c5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-08dcd14316a0525c5",
            "ingress": [],
            "name": "terraform-sg",
            "name_prefix": null,
            "owner_id": "527372304345",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-05ff6b60"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2449829711",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08dcd14316a0525c5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.w1_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_ingress_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-898890764",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08dcd14316a0525c5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.w1_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_ingress_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3675855221",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08dcd14316a0525c5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.w1_security_group"
          ]
        }
      ]
    }
  ]
}